--- a/haiqal2.html
+++ b/haiqal2.html
@@ -6,10 +6,14 @@
         <title>Haiqal&#9829;Linda</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noindex, nofollow">
-        <meta name="description" content="Invitation to our wedding Haiqal&Linda.">
+        <meta name="description" content="Tekan pautan untuk lihat jemputan">
         <meta name="author" content="Haiqal & Linda">
-        <meta property="og:description" content="Invitation to our wedding Haiqal&Linda.">
         <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
+        <meta property="og:site" content="https://eiqalhalim.github.io/haiqal-linda-solemnization/">
+        <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
+        <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
+        <meta property="og:image" content="img/marriednow-project/gambar-jemputan.jpg">
+        <script src="https://www.youtube.com/iframe_api"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +32,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
        
+         <link rel="stylesheet" href="card/css/player.css">
         <!-- Box icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
         <!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
@@ -50,12 +55,19 @@
     </head>
 
     <body class="container-fluid" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+        <div class="spinner-wrapper">
+            <div class="spinner">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg "></div>
                 <div id="template" class="col-lg-4 p-0 shadow-lg">
                     <div class="start aos-init aos-animate" data-aos="fade-in" data-aos-duration="1000">
                         <main>                                  
-                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/marriednow-project/background-card.jpg')">
+                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/marriednow-project/background-card-flora1.jpg')">
                                 <div class="start-overlay">
                                     <div class="d-flex justify-content-center align-items-center animated fadeInDow mt-4 py-5">
                                         <div class="row"> 
@@ -120,7 +132,7 @@
                         </ul> -->
                     </nav>
                     <div class="main-div d-none">
-                        <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/background-card.jpg')">
+                        <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/background-card-flora1.jpg')">
                             <div class="wrapper pb-16" style="transform: translate(20px, 0px);">
                                 <div class="row"> 
                                     <div class="cinzel-font animated fadeInDown main_text  text-center" style="font-size:23px">
@@ -145,6 +157,19 @@
                                 </div> 
                             </div> 
                         </section>
+                        <div class="music">
+                                 <audio controls="" loop="" id="audio" controlslist="nodownload" class="hidden">
+                                    <source src="storage/music/TW75XJrNJb65cxOqgXpAuA.mp3" type="audio/mpeg">
+                                </audio>
+                                <button id="music-btn" class="text-black font-bold py-2 px-4 rounded-full flex">
+                                <div class="music-player">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                                <span class="music-title">Akad - Payung Teduh</span>
+                            </button>
+                        </div>
                         <section class="container section wedding-info aos-init aos-animate poppin-font py-4" id="info" data-aos="fade-up" data-aos-duration="1000">
                             <div class="d-flex justify-content-center align-items-center"> 
                                 <div class="wrapper">
@@ -528,10 +553,23 @@
         </div>
 
         <script>
+            /* Preloader */
+            $(window).on('load', function() {
+                var preloaderFadeOutTime = 500;
+
+                function hidePreloader() {
+                    var preloader = $('.spinner-wrapper');
+                    setTimeout(function() {
+                        preloader.fadeOut(preloaderFadeOutTime);
+                    }, 500);
+                }
+                hidePreloader();
+            });
             AOS.init();
           </script>
         <script src="https://cdn.jsdelivr.net/npm/color-calendar/dist/bundle.min.js"></script>
         <script src="js/calendar.js"></script>
         <script src="js/card-main.js"></script>
+        <script src="js/player.js"></script>
     </body>
 </html>
