--- a/haiqal2.html
+++ b/haiqal2.html
@@ -67,7 +67,7 @@
                 <div id="template" class="col-lg-4 p-0 shadow-lg">
                     <div class="start aos-init aos-animate" data-aos="fade-in" data-aos-duration="1000">
                         <main>                                  
-                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/marriednow-project/background-card-flora1.jpg')">
+                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/marriednow-project/background-flora-custom.png')">
                                 <div class="start-overlay">
                                     <div class="d-flex justify-content-center align-items-center animated fadeInDow mt-4 py-5">
                                         <div class="row"> 
@@ -132,7 +132,7 @@
                         </ul> -->
                     </nav>
                     <div class="main-div d-none">
-                        <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/background-card-flora1.jpg')">
+                        <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/background-flora-custom.png')">
                             <div class="wrapper pb-16" style="transform: translate(20px, 0px);">
                                 <div class="row"> 
                                     <div class="cinzel-font animated fadeInDown main_text  text-center" style="font-size:23px">
