adjust positon and add media reponsive

--- a/haiqal2.html
+++ b/haiqal2.html
@@ -70,7 +70,7 @@
                             <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/marriednow-project/background-flora-custom.png')">
                                 <div class="start-overlay">
                                     <div class="align-items-center animated fadeInDow">
-                                        <div class="container d-flex flex-column aligns-items-center justify-content-center" style="padding-top:28%;">
+                                        <div class="container d-flex flex-column aligns-items-center justify-content-center main-opening">
                                             <div class="row"> 
                                                 <div class="col">
                                                     <div class="rouge-script-font main_text  text-center" style="font-size:4em; color:#77632a">
@@ -132,19 +132,19 @@
                         <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/background-flora-custom.png')">
                             <div class="wrapper pb-16">
                                 <div class="align-items-center animated fadeInDow">
-                                    <div class="container d-flex flex-column aligns-items-center justify-content-center" style="position: relative; top: -20px;">
+                                    <div class="container d-flex flex-column aligns-items-center justify-content-center">
                                         <div class="row"> 
                                             <div class="col">
-                                                <div class="rouge-script-font main_text  text-center" style="font-size:4em; color:#77632a">
+                                                <div class="rouge-script-font main_text  text-center" style="font-size:3em; color:#77632a">
                                                     Raikan Cinta
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font main_text text-center">
-                                            <p class="animated zoomIn alice-font" style="color:#b29946; font-size:4em;">HAIQAL</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#77632a; font-size:4em;">&amp;</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#b29946; font-size:4em;">LINDA</p>
+                                            <p class="animated zoomIn alice-font" style="color:#b29946; font-size:3em;">HAIQAL</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#77632a; font-size:3em;">&amp;</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#b29946; font-size:3em;">LINDA</p>
                                             </div> 
                                         </div>
                                         <div class="row"> 
@@ -492,15 +492,15 @@
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
                                                     <div class="fw-bold">Cik. Liza</div>
-                                                    018762929
+                                                    0187629298
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:018762929">
+                                                    <a href="tel:0187629298">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=6018762929" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60187629298" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
