add credit, change hash tag, add rvsp

--- a/haiqal2.html
+++ b/haiqal2.html
@@ -12,7 +12,7 @@
         <meta property="og:site" content="https://eiqalhalim.github.io/haiqal-linda-solemnization/">
         <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
-        <meta property="og:image" content="img/marriednow-project/gambar-jemputan.jpg">
+        <meta property="og:image" content="img/marriednow-project/Haiqal-Linda-square.png">
         <script src="https://www.youtube.com/iframe_api"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,17 +99,17 @@
                     <nav class="d-flex navbar navbar-dark bg-dark navbar-nav w-100 bottom-fixed nav__menu_card animated fadeInUp navbar-card d-none"  style="width:inherit !important;background-color: #b29946 !important;">
                         <ul class="row m-auto p-0 w-100 text-center list-unstyled">
                             <li class="col">
-                                <a class="nav-link" data-bs-toggle="modal" data-bs-target="#giftModal">
-                                    <i class="bx bx-gift nav__icon bx-md nav-icon-color"></i>
-                                    <br />
-                                    <small class="poppin-font nav-text-color">Hadiah</small>
-                                </a>
-                            </li>
-                            <li class="col">
                                 <a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactModal">
                                     <i class="bx bx-phone nav__icon bx-md nav-icon-color"></i>
                                     <br />
                                     <small class="poppin-font nav-text-color">Hubungi</small>
+                                </a>
+                            </li>
+                            <li class="col">
+                                <a class="nav-link" data-bs-toggle="modal" data-bs-target="#giftModal">
+                                    <i class="bx bx-envelope bx-tada nav__icon bx-md nav-icon-color"></i>
+                                    <br />
+                                    <small class="poppin-font nav-text-color">RVSP</small>
                                 </a>
                             </li>
                             <li class="col">
@@ -276,12 +276,27 @@
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
-                                    <p class="hashtag text-center" style="font-size: 20px">#HaiqalfalLinlove</p>
+                                    <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#77632a">#fromSCHOOLMATEStoSOULMATES</p>
                                 </li>
                                 <li class="flex justify-center text-center">
-                                    <p>
-                                        <span class="text-red-500"><i class="fa-brands fa-connectdevelop"></i></span> Created  by<br>
+                                    <p class="mx-2">
+                                        <span style="color: #b29946">
+                                            <i class="fa-brands fa-codepen"></i></span> Developed by<br>
                                         Haiqal Halim
+                                    </p> 
+                                </li>
+                                <li class="flex justify-center text-center mt-3">
+                                    <p class="mx-2">
+                                        <span style="color: #b29946">
+                                            <i class="fa-solid fa-paintbrush"></i></span> Designed by<br>
+                                            <a href="https://www.linkedin.com/in/tina-hassan/" target="_blank">Tina Hassan</a>
+                                    </p>
+                                </li> 
+                                <li class="flex justify-center text-center mt-3">
+                                    <p class="mx-2">
+                                        <span style="color: #b29946">
+                                            <i class="fa-solid fa-heart-circle-check"></i></span> Approved by<br>
+                                            Linda Mohmad
                                     </p>
                                 </li>
                             </ul>    
@@ -366,7 +381,7 @@
                                                     <span> GOOGLE MAPS</span>
                                                 </a>  
                                             </li>
-                                            <li class="list-group-item location-icon" style="border-top: transparent;width: 211.92px;";> 
+                                            <li class="list-group-item location-icon" style="border-top: transparent;width: 160px;";> 
                                                 <a target="_blank" class="float-end" href="https://waze.com/ul/hw282gwxn9">
                                                     <i class="fab fa-waze fa-lg"></i>
                                                     <span> WAZE</span>
@@ -532,23 +547,13 @@
                 
                 <!-- Contact Modal -->
                 <div class="modal fade" id="giftModal"  tabindex="-1" aria-labelledby="giftContent" aria-hidden="true">
-                    <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable">
+                    <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable modal-xl">
                         <div class="modal-content poppin-font">
                             <div class="modal-header">
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <div class="row">
-                                    <div class="text-center">
-                                        <h3 class="feature-title">Hadiah</h3>
-                                    </div>
-                                </div>
-                                <div class="row mb-4">
-                                    <p class="text-center pb-3 text-lg">
-                                       Nama Bank
-                                    </p>
-                                    
-                                </div>
+                                <script type="text/javascript" src="https://form.jotform.com/jsform/232204402116438"></script>
                             </div>
                         </div>
                     </div>
